# poa

./: README.md
pw01/lab01-matrix-graf_demont_lab1/: CMakeLists.txt  POA_Rapport_Lab1_CG_KD.docx  UML.puml
pw01/lab01-matrix-graf_demont_lab1/src/: Matrix.cpp  Matrix.hpp  MatrixOperations.cpp  MatrixOperations.hpp  Utils.cpp  Utils.hpp  main.cpp
pw02/lab02-squadron-poa_demont_graf/: CMakeLists.txt  POA_Rapport_Lab2_CG_KD.docx  class_diagram.puml
pw02/lab02-squadron-poa_demont_graf/src/: Constants.hpp  Squadron.cpp  Squadron.hpp  main.cpp
pw02/lab02-squadron-poa_demont_graf/src/ships/: Interceptor.cpp  Interceptor.hpp  Ship.cpp  Ship.hpp  TIE.cpp  TIE.hpp
pw02/lab02-squadron-poa_demont_graf/src/ships/cargo/: CargoShip.cpp  CargoShip.hpp  Destroyer.cpp  Destroyer.hpp  Shuttle.cpp  Shuttle.hpp
pw02/lab02-squadron-poa_demont_graf/src/tests/: ShipTest.cpp
pw03/lab3-riviere-demont_graf/: CMakeLists.txt  POA_Rapport_Lab3_CG_KD.docx  UML.puml
pw03/lab3-riviere-demont_graf/src/: Controller.cpp  Controller.hpp  Validation.cpp  Validation.hpp  main.cpp
pw03/lab3-riviere-demont_graf/src/container/: Bank.cpp  Bank.hpp  Boat.cpp  Boat.hpp  Container.cpp  Container.hpp
pw03/lab3-riviere-demont_graf/src/people/: Person.cpp  Person.hpp
pw03/lab3-riviere-demont_graf/src/people/drivers/: Driver.cpp  Driver.hpp  Parent.cpp  Parent.hpp  Policeman.cpp  Policeman.hpp
pw03/lab3-riviere-demont_graf/src/people/noDrivers/: NoDriver.cpp  NoDriver.hpp  Thief.cpp  Thief.hpp
pw03/lab3-riviere-demont_graf/src/people/noDrivers/childs/: Child.cpp  Child.hpp  Daughter.cpp  Daughter.hpp  Son.cpp  Son.hpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/: BuffyWinRate.xlsx  CMakeLists.txt  POA_Rapport_Lab4_CG_KD.docx  UML.puml  UML_labo04_buffy.sly
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/: main.cpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/Action/: Action.cpp  Action.hpp  Kill.cpp  Kill.hpp  Move.cpp  Move.hpp  Transform.cpp  Transform.hpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/Controller/: Controller.cpp  Controller.hpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/Displayer/: Display.cpp  Display.hpp  resume.cpp  resume.hpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/Field/: Field.cpp  Field.hpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/Person/: Buffy.cpp  Buffy.hpp  Human.cpp  Human.hpp  Humanoid.cpp  Humanoid.hpp  Vampire.cpp  Vampire.hpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/Statistics/: statisticsCalculator.cpp  statisticsCalculator.hpp
pw04/lab4-buffy-2024-poa_demont_graf_lab04_v2/src/Utils/: Position.cpp  Position.hpp  Random.cpp  Random.hpp
